Raghavendra, Hari | #1924 | Modified hustle module to accept comparator function

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "keywords": ["hustle", "angularjs"],
     "dependencies": {
         "angular": null,
-        "hustle": "https://github.com/DWB-eHealth/hustle.git#v0.2.0.cleanup_abandoned_items_patch"
+        "hustle": "https://github.com/DWB-eHealth/hustle.git#v0.3"
     },
     "devDependencies": {
         "angular-mocks": null
